Bug 127546 - Calc Crashes if I click in to the Range-select fied of the 'Define Label Range' dialog (gen)
Summary: Calc Crashes if I click in to the Range-select fied of the 'Define Label Rang...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, haveBacktrace, needUITest, regression
Depends on:
Blocks:
 
Reported: 2019-09-14 15:35 UTC by m.nemo
Modified: 2019-09-17 08:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["SvListView::SelectListEntry(SvTreeListEntry *,bool)"]


Attachments
gdb bt (10.90 KB, text/plain)
2019-09-14 21:21 UTC, Julien Nabet
Details
bt from vcl/source/treelist/treelistbox.cxx:2174 (Select: Null-Ptr) (10.42 KB, text/plain)
2019-09-14 21:28 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.nemo 2019-09-14 15:35:55 UTC
Description:
LibreOffice crashes every time in click into the Range select-filed/list of the 'Define Label Range' dialog.

Steps to Reproduce:
1. Open (new) Calc Document/Spreadsheet
2. Go to [Sheets] -> [Named Ranges and Experssions] -> [Labels...]
3. Click on '--Column--' or '--Range--' or anything else in the 'Range' Select box.


Actual Results:
Instant CRASH!

Expected Results:
No Crash.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
I Tested with the debian Testing (6.3.0) and unstable (6.3.1) packages.

Version: 6.3.1.2
Build ID: 1:6.3.1-1
CPU threads: 4; OS: Linux 5.2; UI render: default; VCL: kde5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Julien Nabet 2019-09-14 21:21:33 UTC
Created attachment 154166 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this with kf5 rendering, not with gtk3
Comment 2 Julien Nabet 2019-09-14 21:22:13 UTC
Michael: thought you might be interested in this one since it's specific to kf5.
Comment 3 Julien Nabet 2019-09-14 21:28:44 UTC
Created attachment 154167 [details]
bt from vcl/source/treelist/treelistbox.cxx:2174 (Select: Null-Ptr)

I attached gdb session with bt from vcl/source/treelist/treelistbox.cxx:2174 (Select: Null-Ptr)
We can see that we enter 4 times here with a pEntry not null then at the 5th time, pEntry is null.

In comparison with gtk3, we don't go here.

BTW: I just click "Column..."
Comment 4 Oliver Brinzing 2019-09-15 11:36:25 UTC
i can reproduce the crash with:

Version: 6.3.1.2 (x64)
Build-ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 5 Xisco Faulí 2019-09-16 14:12:43 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=dd5fbb68ebaa8b8be8b6a4a97a8aedbf22d5714f

author	Caolán McNamara <caolanm@redhat.com>	2019-04-11 21:19:28 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-04-12 14:53:02 +0200
commit dd5fbb68ebaa8b8be8b6a4a97a8aedbf22d5714f (patch)
tree dcd20914bf8056798a21864414b16030e136d846
parent 3df141b2084d3abc1587ef24d2b371b779bb3d50 (diff)
weld ScColRowNameRangesDlg

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 6 Commit Notification 2019-09-16 16:05:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7d41122d44f8566316d984333b17af39cf413a52%5E%21

Resolves: tdf#127546 crash on clicking --Column-- or --Row--

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2019-09-16 16:24:58 UTC
fixed in master, backport to 6-3 in gerrit
Comment 8 Xisco Faulí 2019-09-17 08:00:24 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: c56bf1479cc71d1a2b0639f6383e90c1f7e3655b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 9 Xisco Faulí 2019-09-17 08:01:25 UTC
Verified with gen as well
Comment 10 Commit Notification 2019-09-17 08:03:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/7ee5b165e8089a19306be14478270236b38ada01%5E%21

Resolves: tdf#127546 crash on clicking --Column-- or --Row--

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.