Resolves: tdf#127546 crash on clicking --Column-- or --Row--

Change-Id: I59cbcdf09b679521b54aa9752bfb15db89829993
Reviewed-on: https://gerrit.libreoffice.org/79016
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>